Added controller, repository, and service layer for job microservice

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<artifactId>spring-dotenv</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+
+		<!-- OpenAPI Documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.7.0</version> <!-- Check for the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
