--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.7.0</version> <!-- Check for the latest version -->
 		</dependency>
+
+		<!-- Mockito for mocking service layer -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
