Fix ec2 deployment in workflow deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,25 +35,22 @@ jobs:
             -Djib.to.auth.username=$REGISTRY_USERNAME \
             -Djib.to.auth.password=$REGISTRY_PASSWORD
 
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
       - name: Deploy to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           CONTAINER_IMAGE: louislu00/jobs-microservice:latest
-          DB_URL: ${{ secrets.DB_URL }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST << 'EOF'
-            # Pull the latest image from Docker Hub
             docker pull $CONTAINER_IMAGE
-
-            # Stop and remove any existing container
             docker stop my-spring-app || true
             docker rm my-spring-app || true
-
-            # Run the new container with environment variables
             docker run -d --name my-spring-app -p 8080:8080 \
-              -e DB_URL=$DBURL \
+              -e DB_URL=$DB_URL \
               -e DB_USERNAME=$DB_USERNAME \
               -e DB_PASSWORD=$DB_PASSWORD \
               $CONTAINER_IMAGE
