Fix ec2 deployment in workflow deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-#      - name: Build with Maven
-#        env:
-#          DB_URL: ${{ secrets.DB_URL }}
-#          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-#          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-#        run: mvn -B package --file pom.xml
-
       - name: Build and Push Docker Image with Jib
         env:
           REGISTRY_USERNAME: ${{ secrets.DOCKER_EMAIL }}
@@ -40,18 +33,18 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Deploy to EC2
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          CONTAINER_IMAGE: louislu00/jobs-microservice:latest
-        run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST << 'EOF'
-            docker pull $CONTAINER_IMAGE
-            docker stop my-spring-app || true
-            docker rm my-spring-app || true
-            docker run -d --name my-spring-app -p 8080:8080 \
-              -e DB_URL=$DB_URL \
-              -e DB_USERNAME=$DB_USERNAME \
-              -e DB_PASSWORD=$DB_PASSWORD \
-              $CONTAINER_IMAGE
-          EOF
+#      - name: Deploy to EC2
+#        env:
+#          EC2_HOST: ${{ secrets.EC2_HOST }}
+#          CONTAINER_IMAGE: louislu000/jobs-microservice:latest
+#        run: |
+#          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST << 'EOF'
+#            docker pull $CONTAINER_IMAGE
+#            docker stop my-spring-app || true
+#            docker rm my-spring-app || true
+#            docker run -d --name my-spring-app -p 8080:8080 \
+#              -e DB_URL=$DB_URL \
+#              -e DB_USERNAME=$DB_USERNAME \
+#              -e DB_PASSWORD=$DB_PASSWORD \
+#              $CONTAINER_IMAGE
+#          EOF
