--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,9 @@
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>3.3.1</version>
 				<configuration>
+					<from>
+						<image>eclipse-temurin:17-jre</image> <!-- multi-architecture image -->
+					</from>
 					<to>
 						<image>louislu00/jobs-microservice:latest</image>
 					</to>
