Added Github Workflow for image containerize and upload to DockerHub (#7)
* Added deploy CI/CD

Used docker to containerize

* Test workflow

* Fix workflow deploy.yml

* Fix workflow deploy.yml

* Fix workflow deploy.yml

* Removw maven build from workflow deploy.yml

* Fix jib build in  workflow deploy.yml

* Fix image push in workflow deploy.yml

* Fix image push in workflow deploy.yml

* Fix image push in workflow deploy.yml

* Fix ec2 deployment in workflow deploy.yml

* Fix ec2 deployment in workflow deploy.yml

* Update docker image architecture setting

* Update DockerHub automatic upload flow

* Update DockerHub automatic upload flow

--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,16 @@
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>3.3.1</version>
 				<configuration>
+					<from>
+						<platforms>
+							<platform>
+								<architecture>arm64</architecture>
+								<os>linux</os>
+							</platform>
+						</platforms>
+					</from>
 					<to>
-						<image>louislu00/jobs-microservice:latest</image>
-						<auth>
-							<username>${env.DOCKER_USERNAME}</username>
-							<password>${env.DOCKER_PASSWORD}</password>
-						</auth>
+						<image>louislu000/jobs-microservice:latest</image>
 					</to>
 				</configuration>
 			</plugin>
